dark mode fixes

--- a/assets/styles/scss/_fonts.scss
+++ b/assets/styles/scss/_fonts.scss
@@ -3,6 +3,7 @@
 body * {
   font-family: 'Nunito Sans', sans-serif;
   color: var(--text);
+  transition: color 300ms;
 }
 
 /*
